# molecule-net

./: .gitignore  LICENSE  README.md  pyproject.toml
analyses/: analysis.py  analyze_molecules.ipynb  generate_molecules.ipynb  make_predictions.py  molecule_analysis.py  predict_simulations.ipynb  run_predictions.sh  utils.py
configs/: attention_unet.py  default.py  eq_attention_unet.py  root_dirs.py  test.py  torch_attention_unet.py  unet.py
molnet/: __main__.py  graphics.py  hooks.py  lightning_trainers.py  loss.py  torch_hooks.py  torch_train_state.py  torch_utils.py  train.py  train_segmentation.py  train_state.py  train_torch.py  utils.py
notebooks/: ase_analysis.ipynb  atom_map_to_molecule.ipynb  data_creation_timing.ipynb  escnn.ipynb  escnn_conv_performance.ipynb  experimental_data.ipynb  flax_dtype.ipynb  lightning.ipynb  load_trained_model.ipynb  model_test.ipynb  pooling.ipynb  predict_experiments.ipynb  predict_experiments_new.ipynb  prediction_visualization.ipynb  rebias_xyzs.ipynb  segmentation.ipynb  test_afm_generation.ipynb  test_data_creation.ipynb  test_hooks.ipynb  test_input_pipeline.ipynb  test_loss.ipynb  test_mlspm_peak_dist.ipynb  test_np_vec.ipynb  test_pmapping.ipynb  test_replication.ipynb  test_sharding.ipynb  test_tf_dataset.ipynb  test_torchhooks.ipynb  test_wds_to_tf.ipynb  tf_dataloader_with_torch.ipynb  tf_image_resize.ipynb  tf_random.ipynb  tmp_png_afm.ipynb  torch_loss.ipynb  water_pipeline.ipynb  webdataset_testing.ipynb
tests/: fdbm_input_test.py  hook_test.py  input_test.py  online_input_test.py  seg_input_test.py  (+3 more)
(+62 files in other folders)
