[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "molnet"
version = "0.0.0"
dependencies = [
    "jax",
    "matplotlib",
    "numpy",
    "clu",
    "h5py",
    "absl-py",
    "optax",
    "dm-haiku",
    "flax",
    "tqdm",
    "ase",
    "scipy",
	"webdataset",
	"torch",
	"scikit-image",
    "tensorflow",
	"tensorboard",
]

[tool.setuptools.packages]
find = {}
