[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "molnet"
version = "0.0.0"
dependencies = [
    "jax",
    "matplotlib",
    "numpy",
    "clu==0.0.9",
    "h5py",
    "absl-py",
    "optax",
    "dm-haiku",
    "flax",
    "tqdm",
    "ase",
    "scipy",
	"scikit-image",
    "tensorflow==2.13.0",
	"tensorboard",
]

[tool.setuptools.packages]
find = {}
