[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "molnet"
version = "0.0.0"
dependencies = [
    "tensorflow==2.13.0",
    "clu==0.0.9",
    "jax",
    "matplotlib",
    "numpy",
    "h5py",
    "absl-py",
    "optax",
    "dm-haiku",
    "flax",
    "tqdm",
    "ase",
    "scipy",
	"scikit-image",
	"tensorboard",
]

[tool.setuptools.packages]
find = {}
